--- a/my-app/src/components/Header.css
+++ b/my-app/src/components/Header.css
@@ -1,15 +1,20 @@
 .header-container {
-    display: flex;
-    padding: 20px;
-    align-items: center;
-    background-color: #383838;
-    color: white;
+  display: flex;
+  padding: 20px;
+  align-items: center;
+  background-color: #383838;
+  color: white;
 }
 .header-searchBox {
-    width: 50%;
-    margin: 0px 150px;
+  width: 50%;
+  margin-left: 100px;
+  padding: 10px;
 }
 .header-hamburger {
-    margin: 0px 20px;
-    cursor: pointer;
+  margin: 0px 20px;
+  cursor: pointer;
+}
+.clear-search {
+  cursor: pointer;
+  padding: 0px 10px;
 }
