added heading in notes

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -17,7 +17,7 @@
   --primary-success-color: #1d5424;
   --primary-dark-color: #2d4150;
   --secondary-bg-color: #10111d;
-  --font-color: #fff;
+  --font-color: #e6e6e6;
   --bg-color: #161625;
   --heading-color: #818cab;
 }
