--- a/my-app/src/components/notes/NotesContainer.css
+++ b/my-app/src/components/notes/NotesContainer.css
@@ -20,6 +20,7 @@
 
 .notes-textarea {
   min-width: 600px;
+  padding: 10px;
   min-height: 200px;
   font-family: inherit;
   margin: 5px;
@@ -62,4 +63,17 @@
 .modal-container {
   padding: 20px;
   background: var(--bg-color);
+}
+.notes-container {
+  display: inline-grid;
+}
+.notes-heading {
+  padding: 10px;
+  margin: 5px;
+  border: none;
+  font-size: 16px;
+  text-transform: capitalize;
+  font-weight: 600;
+  color: var(--font-color);
+  background: var(--secondary-bg-color);
 }
