--- a/my-app/src/components/notes/NotesContainer.css
+++ b/my-app/src/components/notes/NotesContainer.css
@@ -63,6 +63,11 @@
 .modal-container {
   padding: 20px;
   background: var(--bg-color);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 2;
+  transform: translate(-50%, -50%);
 }
 .notes-container {
   display: inline-grid;
@@ -76,4 +81,11 @@
   font-weight: 600;
   color: var(--font-color);
   background: var(--secondary-bg-color);
+}
+.show-modal {
+  display: block
+}
+
+.hide-modal {
+  display: none;
 }
