--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -33,6 +33,10 @@
   pointer-events: none;
 }
 
+:focus {
+  outline: var(--primary-dark-color) solid 2px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
