--- a/my-app/src/components/Header.css
+++ b/my-app/src/components/Header.css
@@ -1,5 +1,4 @@
 .header-container {
-  display: flex;
   padding: 20px;
   align-items: center;
   background-color: var(--bg-color);
@@ -15,8 +14,9 @@
 }
 
 .header-searchBox {
-  width: 45%;
-  margin-left: 100px;
+  width: -webkit-fill-available;
+  max-width: 600px;
+  margin-left: 7%;
   padding: 10px;
   background: var(--secondary-bg-color);
   color: var(--font-color);
@@ -26,9 +26,25 @@
 .header-hamburger {
   margin: 0px 20px;
   cursor: pointer;
+  border: none;
+  background: unset;
 }
 
 .clear-search {
   cursor: pointer;
   padding: 0px 10px;
+}
+.header-top {
+  justify-content: space-between;
+  display: flex;
+  margin: 0px 20px;
+  color: var(--font-color);
+}
+.header-bottom {
+  display: flex;
+  margin: 0px 20px;
+  color: var(--font-color);
+}
+.header-toggle-btn {
+  margin: 20px 0px;
 }
