--- a/my-app/src/components/notes/NoteList.css
+++ b/my-app/src/components/notes/NoteList.css
@@ -21,6 +21,8 @@
   font-size: 10px;
   cursor: pointer;
   padding: 10px;
+  background: unset;
+  border: none;
   text-transform: uppercase;
 }
 
@@ -37,4 +39,9 @@
   font-weight: 600;
   text-transform: capitalize;
   font-size: larger;
+}
+@media only screen and (max-width: 1200px) {
+  .notes-action-type:last-child {
+    padding-left: unset;
+  }  
 }
