--- a/my-app/src/components/Sidebar.css
+++ b/my-app/src/components/Sidebar.css
@@ -18,6 +18,7 @@
   border: none;
   width: 100%;
   cursor: pointer;
+  font-family: monospace;
   background: unset;
   color: var(--font-color);
 }
