--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -45,9 +45,10 @@
 
 .app-view {
   display: flex;
+  height: 100%;
 }
 
-html, body, #roor, #App {
+html, body, #root, #App {
   width: 100%;
   height: 100%;
 }
