made close tab accessible

--- a/my-app/src/components/notes/Modal.css
+++ b/my-app/src/components/notes/Modal.css
@@ -17,3 +17,11 @@
 .hide-modal {
     display: none;
 }
+.close {
+    cursor: pointer;
+    border: none;
+    background: unset;
+}
+.close-btn-container {
+    text-align: right;
+}
