--- a/my-app/src/components/Header.css
+++ b/my-app/src/components/Header.css
@@ -20,7 +20,7 @@
   padding: 10px;
   background: var(--secondary-bg-color);
   color: var(--font-color);
-  border: 1px solid #404040;
+  border: 1px solid var( --primary-dark-color);
 }
 
 .header-hamburger {
