--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -51,3 +51,8 @@
 .header-toggle-btn {
   margin: 20px 0px;
 }
+@media screen and (max-width: 767px) {
+  .header-bottom {
+    margin: 0px;
+  }
+}
